--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "bhatkanti_backend",
   "version": "1.0.0",
   "description": "Backend of travel app and web bhatkanti",
@@ -14,6 +15,9 @@
   "author": "ayushempire03@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.2",
     "nodemon": "^3.1.10",
