--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "mongoose": "^8.15.2",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3"
